修改show.html的样式，调整所有页面自适应屏幕的方式

--- a/css/src/pc-style.css
+++ b/css/src/pc-style.css
@@ -1,10 +1,10 @@
 .content {
 	margin: 0 auto;
   width: 500px;
-  height: 660;
 }
 
 #footer, #header {
 	margin: 0 auto;
+	height: 5.2%;
 	width: 530px;
 }
