--- a/css/src/style.css
+++ b/css/src/style.css
@@ -1,27 +1,15 @@
+
+/****************common****************/
+
 body {
   margin: 0px;
   padding: 0px;
   height: 100%;
 }
 
-#index-image {
-  display: block;
-  margin: 0 auto;
-  z-index: 99;
-}
-
 #footer, #header {
   margin: 0 auto;
   /*height: 7%;*/
-}
-
-#index-image img {
-  position:absolute;
-  left:0px;
-  top:25%;
-  width:100%;
-  height:35%;
-  z-index: 0;
 }
 
 .bg-image {
@@ -54,20 +42,6 @@ body {
   width: 95%;
 }
 
-#index-login-btn {
-  position: absolute;
-  bottom: 5%;
-  left: 15%;
-  width: 30%;
-}
-
-#index-register-btn {
-  position: absolute;
-  bottom: 5%;
-  right: 15%;
-  width: 30%
-}
-
 #login-image, #register-image {
   display: block;
   margin: 0 auto;
@@ -84,97 +58,20 @@ body {
   z-index: 0;
 }
 
-.bg-image {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:100%;
-  height:100%;
-  z-index: 0;
-}
-
 #login-form, #register-form{
   position:absolute;
   top: 45%;
   width: 90%;
 }
 
-#login-form a {
-  position: absolute;
-  right: 10%;
-  margin-top: 10px;
-}
-
-#login-btn-wrapper {
-  position: absolute;
-  bottom: 20%;
-  left: 15%;
-  width: 30%;
-}
-
-#register-btn-wrapper {
-  position: absolute;
-  bottom: 20%;
-  left: 5%;
-  width: 30%;
-}
-
-#login-register-btn {
-  position: absolute;
-  bottom: 20%;
-  right: 15%;
-  width: 30%
-}
-/*
-.footer-button {
-  float: left;
-  width: 25%;
-}
-
-.footer-button:hover {
-  background-image: linear-gradient( #111111, #3c3c3c);
-}
-
-.footer-button img {
-  display: inline-block;
-  margin-left: 30%;
-  width: 40%;
-  height: 100%;
-}*/
-
 .clear {
   clear: both;
 }
 
-/*#footer-container {
-  width: 100%;
-  margin: 0 auto;
-  height: 100%;
-}
-*/
 .footer-text {
   font-size: 11pt;
   color: #aaaaaa;
   font-weight: normal;
-}
-
-#mes-list {
-  width: 100%;
-  margin: 0 auto;
-}
-
-#mes-list li {
-  padding: 10px;
-}
-
-.show-content {
-  font-weight: normal;
-  color: gray;
-}
-
-.contact-description {
-  font-weight: normal;
-  color: gray;
 }
 
 #footer-navbar .ui-icon {
@@ -212,3 +109,101 @@ body {
 #footer-navbar .ui-btn-text {
   color: #aaaaaa;
 }
+
+/****************common****************/
+
+/****************index****************/
+
+#index-image {
+  display: block;
+  margin: 0 auto;
+  z-index: 99;
+}
+
+#index-image img {
+  position:absolute;
+  left:0px;
+  top:25%;
+  width:100%;
+  height:35%;
+  z-index: 0;
+}
+
+#index-login-btn {
+  position: absolute;
+  bottom: 5%;
+  left: 15%;
+  width: 30%;
+}
+
+#index-register-btn {
+  position: absolute;
+  bottom: 5%;
+  right: 15%;
+  width: 30%
+}
+
+/****************index****************/
+
+/****************login****************/
+#login-form a {
+  position: absolute;
+  right: 10%;
+  margin-top: 10px;
+}
+
+#login-btn-wrapper {
+  position: absolute;
+  bottom: 20%;
+  left: 15%;
+  width: 30%;
+}
+
+#login-register-btn {
+  position: absolute;
+  bottom: 20%;
+  right: 15%;
+  width: 30%
+}
+
+/****************login****************/
+
+/****************register****************/
+
+#register-btn-wrapper {
+  position: absolute;
+  bottom: 20%;
+  left: 5%;
+  width: 30%;
+}
+
+/****************register****************/
+
+/****************show****************/
+.show-content {
+  font-weight: normal;
+  color: gray;
+}
+/****************show****************/
+
+/****************contact****************/
+.contact-description {
+  font-weight: normal;
+  color: gray;
+}
+/****************contact****************/
+
+#mes-list {
+  width: 100%;
+  margin: 0 auto;
+}
+
+#mes-list li {
+  padding: 10px;
+}
+
+
+
+
+
+
