modify the style.css

--- a/css/src/pc-style.css
+++ b/css/src/pc-style.css
@@ -1,14 +1,5 @@
-.content {
-	margin: 0 auto;
-  	width: 30%;
-}
 
-#footer, #header {
-	margin: 0 auto;
-	height: 5.2%;
-	width: 30%;
-}
-
-#footer-navbar a{
+/*#footer-navbar a{
 	height: 100%;
 }
+*/
